--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,20 +1,26 @@
 
-\section{Education}
+\section{Ausildung}
 
 \outerlist{
 
 \entrybig
-{\textbf{ETH Zurich}}{Zurich, CH}
-{M.S. in Computer Science, GPA: 5.63/6.00}{2018\textendash 2020}
+{\textbf{Hochschule der Medien}}{Stuttgart, DE}
+{M.S. in Computer Science \& Media, aktuell $\varnothing$ 1,3}{2023\textendash 2025}
+
+\entrybig
+{\textbf{Hochschule der Medien}}{Stuttgart, DE}
+{B.S. in Computer Science \& Media, $\varnothing$ 1,1}{2019\textendash 2023}
 \innerlist{
-	\entry{Thesis: "Learning in-the-wild Temporal 3D Pose Estimation from MoCap Data"}
+	\entry{Thesis: "Kubernetesbasierte DevOps CloudService Anbieter - Serverless auf Azure und Google Cloud"}
 }
 
 \entrybig
-{\textbf{Middle East Technical University}}{Ankara, TR}
-{B.S. in Computer Engineering, GPA: 3.96/4.00 (ranked $2^{nd}/190$ in the dept.)}{2013\textendash 2018}
-\innerlist{
-	\entry{Thesis: "AlgoTrade: A web-based algorithmic trading and backtesting framework"}
-}
+{\textbf{Universität Stuttgart}}{Stuttgart, DE}
+{Chemie \& Physik - Lehramt Gymnasium}{2017\textendash 2019}
+
+\entrybig
+{\textbf{WHG Göppingen}}{Göppingen, DE}
+{Abitur, $\varnothing$ 1,8}{2012\textendash 2017}
+
 
 }
