--- a/simplecv.sty
+++ b/simplecv.sty
@@ -87,7 +87,7 @@
     \end{minipage}
     \begin{minipage}[t]{0.39\textwidth}
     \begin{flushright}
-    \includegraphics[width=.5\linewidth,keepaspectratio,valign=t]{#3}
+    \includegraphics[width=.7\linewidth,keepaspectratio,valign=t]{#3}
     \end{flushright}
     \end{minipage}
 }
@@ -105,7 +105,7 @@
     \vspace{-\smallskipamount}]
 
 % Footer
-\fancyfoot[R]{Page \thepage \hspace{1pt} of \pageref{LastPage}}
+%\fancyfoot[R]{Page \thepage \hspace{1pt} of \pageref{LastPage}}
 
 % Lists
 \newcommand{\outerlist}[1]{
