--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,30 +1,23 @@
 
-\section{Experience}
+\section{BERUFSERFAHRUNG}
 
 \outerlist{
 
 \entrybig
-	{\textbf{ETH Zurich}}{Zurich, CH}
-	{Student Research Assistant at Data Analytics Lab}{Summer 2019}
+	{\textbf{IT-Designers}}{Esslingen, DE}
+	{Praxissemester, Werkstudent, Abschlussarbeit}{seit 2021}
 \innerlist{
-	\entry{Interpretability in adversarial word embeddings for text}
-	\entryextra{Adapted the codebase for adversarial attacks on embeddings, conducted qualitative and \\ quantitative analyses, worked on adversarial text generation via embedding projection}
+	\entry{Praxissemester im Bereich Schlafdaten Forschung und Analyse mit KI}
+	\entryextra{Werkstudierendentätigkeit im selben Projekt, Schwerpunkt Administration des Kubernetes \\ Clusters und der CI/CD Pipeline}
 }
 
 \entrybig
-	{\textbf{Imperial College London}}{London, UK}
-	{Research Intern at Intelligent Behaviour Understanding Group (iBUG)}{Summer 2017}
+	{\textbf{Hochschule der Medien}}{Stuttgart, DE}
+	{Tutor Software-Entwicklung}{03/2020 - 03/2021}
 \innerlist{
-	\entry{\link{https://ibug-avs.eu}{A novel audiovisual dataset} for normal, whispered and silent speech}
-	\entryextra{Created tools for data collection and analysis, analysed the collected data, implemented \\ fixes, worked on the reimplementation of the existing network in a different library}
-}
-
-\entrybig
-	{\textbf{École Polytechnique Fédérale de Lausanne}}{Lausanne, CH}
-	{Research Intern at Data Intensive Applications and Systems Laboratory (DIAS)}{Summer 2016}
-\innerlist{
-	\entry{Microarchitectural analysis of OLAP database systems}
-	\entryextra{Examined the changes in microarchitectural utilization of different column-oriented \\ database systems on distinct workloads}
+	\entry{Führung des Tutoriums für die Veranstaltung "Software-Entwicklung"}
+	\entryextra{Erstellung von Übungsaufgaben und Prüfungen}
+	\entryextra{Betreuung von Studierenden bei der Entwicklung von Softwareprojekten}
 }
 
 }
