--- a/sections/languages.tex
+++ b/sections/languages.tex
@@ -1,9 +1,7 @@
 
-\section{Languages}
+\section{Ehrenamt}
 
 \denseouterlist{
-\entry{\textbf{English: } Proficient, TOEFL iBT score: 112/120}
-\entrylabeled[--]{\textbf{GRE: } V: 162/170, Q: 170/170, AW: 4.0/6.0}
-\entry{\textbf{Turkish: } Mother tongue, native speaker}
-\entry{\textbf{Spanish: } Conversational, CEFR level: A1-A2}
+\entry{\textbf{Evangelisches Jugendwerk Göppingen: } seit 2016 auf diversen Jugend- und Kindefreizeiten als Mitarbeiter tätig}
+\entry{\textbf{Evangelische Kirche Schlat: } 2014 bis 2019 Leitung einer Jugendgruppe}
 }
