--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,9 +1,9 @@
 
-\section{Skills}
+\section{Fähigkeiten}
 
 \denseouterlist{
-\entry{\textbf{Programming: } Python, Matlab, C/C++, Java}
-\entry{\textbf{M. Learning: } PyTorch, TensorFlow, Keras, Chainer}
-\entry{\textbf{Tools/Techs: } LaTeX, Git, SQL}
-\entry{\textbf{Web: } HTML/CSS, Jekyll, JavaScript}
+\entry{\textbf{Programmiersprachen: } Python, Java, Go, SQL, TypeScript, Bash}
+\entry{\textbf{Tools/Technologien: } LaTeX, Git, Docker, Kubernetes, Proxmox, Netzwerk, Linux, REST, Prometheus, Grafana}
+\entry{\textbf{Kognitiv: } Kommunikativ, Teamfähig, Zuverlässig, Lernbereit}
+\entry{\textbf{Sprachen: } Deutsch A2, Englisch A1}
 }
